21. Added Cards Click Functionality     - when clicked on a particular anime card it will navigate me to /player page     - while navigating to the /player page we are also anime name to the player page     - which is fetched in the PlayerPage and is displayed in the heading of the as Anime Name     - added Functionality to go to next video as soon as the current one ends     - updated index.html to show meta data when the link is shared on social media platforms

--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    
+    <!-- Meta Tags for WhatsApp and Social Media Sharing -->
+    <meta property="og:title" content="aniStream" />
+    <meta property="og:description" content="Bringing the world of anime to your screen, anywhere and anytime." />
+    <meta property="og:image" content="/posters/narutoPoster.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://anistream.kubez.cloud" />
+
+    <!-- Twitter Card meta tags (optional, but good for completeness) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="aniStream" />
+    <meta name="twitter:description" content="Bringing the world of anime to your screen, anywhere and anytime." />
+    <meta name="twitter:image" content="/posters/narutoPoster.png" />
+    
+    <title>AniStream</title>
   </head>
   <body class="min-h-svh min-w-svw select-none">
     <div id="root"></div>
