22. Added Loader to PlayerPage     - loader will be shown for 1sec when routed from HomePage     - updated Title in index.html     - updated image links in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Meta Tags for WhatsApp and Social Media Sharing -->
     <meta property="og:title" content="aniStream" />
     <meta property="og:description" content="Bringing the world of anime to your screen, anywhere and anytime." />
-    <meta property="og:image" content="/posters/narutoPoster.png" />
+    <meta property="og:image" content="https://anistream.kubez.cloud/posters/narutoPoster.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://anistream.kubez.cloud" />
 
@@ -16,9 +16,9 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="aniStream" />
     <meta name="twitter:description" content="Bringing the world of anime to your screen, anywhere and anytime." />
-    <meta name="twitter:image" content="/posters/narutoPoster.png" />
+    <meta name="twitter:image" content="https://anistream.kubez.cloud/posters/narutoPoster.png" />
     
-    <title>AniStream</title>
+    <title>aniStream</title>
   </head>
   <body class="min-h-svh min-w-svw select-none">
     <div id="root"></div>
