23. Updated link from anistream.kubez.cloud to frontend.kubez.cloud

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <!-- Meta Tags for WhatsApp and Social Media Sharing -->
     <meta property="og:title" content="aniStream" />
     <meta property="og:description" content="Bringing the world of anime to your screen, anywhere and anytime." />
-    <meta property="og:image" content="https://anistream.kubez.cloud/posters/narutoPoster.png" />
+    <meta property="og:image" content="https://frontend.kubez.cloud/posters/narutoPoster.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://anistream.kubez.cloud" />
+    <meta property="og:url" content="https://frontend.kubez.cloud" />
 
     <!-- Twitter Card meta tags (optional, but good for completeness) -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="aniStream" />
     <meta name="twitter:description" content="Bringing the world of anime to your screen, anywhere and anytime." />
-    <meta name="twitter:image" content="https://anistream.kubez.cloud/posters/narutoPoster.png" />
+    <meta name="twitter:image" content="https://frontend.kubez.cloud/posters/narutoPoster.png" />
     
     <title>aniStream</title>
   </head>
